--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.17.0",
     "babel-runtime": "^6.26.0",
+    "bcrypt": "^1.0.3",
     "meteor-node-stubs": "^0.3.2",
     "simpl-schema": "^0.4.0"
   },
